# gtest-demo

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  functions.cpp  main.cpp  vector.hpp
test/: CMakeLists.txt  functions.cpp  vector.cpp  vector_templated.cpp
